ffi/iroh_ffi.h

/**
 * Status codes
 */
typedef enum iroh_status_t {
  IROH_STATUS_OK = 0,
  IROH_STATUS_INVALID_ARGUMENT = 1,
  IROH_STATUS_NOT_FOUND = 2,
  IROH_STATUS_ALREADY_CLOSED = 3,
  IROH_STATUS_QUEUE_FULL = 4,
  IROH_STATUS_BUFFER_TOO_SMALL = 5,
  IROH_STATUS_UNSUPPORTED = 6,
  IROH_STATUS_INTERNAL = 7,
  IROH_STATUS_TIMEOUT = 8,
  IROH_STATUS_CANCELLED = 9,
  IROH_STATUS_CONNECTION_REFUSED = 10,
  IROH_STATUS_STREAM_RESET = 11,
} iroh_status_t;
typedef struct iroh_runtime_config_t {
  uint32_t struct_size;
  uint32_t worker_threads;
  uint32_t event_queue_capacity;
  uint32_t reserved;
} iroh_runtime_config_t;
/**
 * Opaque handle types
 */
typedef uint64_t iroh_runtime_t;
/**
 * C-compatible event structure for FFI output
 */
typedef struct iroh_event_t {
  uint32_t struct_size;
  uint32_t kind;
  uint32_t status;
  uint64_t operation;
  uint64_t handle;
  uint64_t related;
  uint64_t user_data;
  const uint8_t *data_ptr;
  uintptr_t data_len;
  uint64_t buffer;
  int32_t error_code;
  uint32_t flags;
} iroh_event_t;
typedef uint64_t iroh_operation_t;
uint32_t iroh_abi_version_major(void);
uint32_t iroh_abi_version_minor(void);
uint32_t iroh_abi_version_patch(void);
int32_t iroh_runtime_new(const struct iroh_runtime_config_t *config, iroh_runtime_t *out_runtime);
int32_t iroh_runtime_close(iroh_runtime_t runtime);
uintptr_t iroh_poll_events(iroh_runtime_t runtime,
                           struct iroh_event_t *out_events,
                           uintptr_t max_events,
                           uint32_t timeout_ms);
int32_t iroh_buffer_release(iroh_runtime_t runtime, uint64_t buffer);
/**
 * Release a string allocated by `alloc_string`.
 * Java must call this to free strings returned via `iroh_bytes_t` fields
 * in structs that were allocated with Rust-owned memory (not caller-buffers).
 *
 * # Safety
 * - `ptr` must be a pointer returned by a Rust `alloc_string` call
 * - `len` must be the length passed back alongside `ptr`
 * - Must be called exactly once for each allocation
 * - `ptr` must not be null
 */
int32_t iroh_string_release(const uint8_t *ptr, uintptr_t len);
int32_t iroh_operation_cancel(iroh_runtime_t runtime, iroh_operation_t operation);
uintptr_t iroh_last_error_message(uint8_t *buffer, uintptr_t capacity);
const char *iroh_status_name(enum iroh_status_t status);